--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <!-- Navigation menu -->
   <nav>
     <ul>
+      <li>
+        <a href="index.html">
+            <img class="logo" src="path/to/logo.png" alt="Logo">
+        </a>
+      </li>
       <li><a href="index.html">Home</a></li>
       <li><a href="shop.html">Shop</a></li>
       <li><a href="cart.html">Cart</a></li>
@@ -25,10 +30,3 @@
   
 </body>
 </html>
-Please note that this is a basic structure, and you can further customize the styles and content according to your specific needs. Remember to replace the path/to/your/image.jpg with the actual path to your desired background image.
-
-
-
-
-
-
