--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Sock Shop</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
+  <title>Socknado | Socks for sale</title>
 </head>
 <body>
-  <!-- Navigation menu -->
-  <nav>
-    <ul>
-      <li>
-        <a href="index.html">
-            <img class="logo" src="path/to/logo.png" alt="Logo">
-        </a>
-      </li>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="shop.html">Shop</a></li>
-      <li><a href="cart.html">Cart</a></li>
-      <li><a href="policy.html">Policy</a></li>
-      <li><a href="account.html">Account</a></li>
-      <li><a href="checkout.html">Checkout</a></li>
-    </ul>
-  </nav>
-  
-  <!-- Rest of your website content -->
-  <h1>Welcome to Socknado</h1>
-  <p>Explore our wide selection of socks and find your perfect pair.</p>
-  
-  <!-- Add your website content here -->
-  
+	<nav>
+		<div class="nav-logo">
+			<a href="#">
+				<img src="images\Socknado-transparent-long.png" alt="Socknado Logo">
+			</a>
+		</div>
+
+		<ul class="nav-links">
+			<li class="link"><a href="#">Home</a></li>
+			<li class="link"><a href="#">Shop</a></li>
+			<li class="link"><a href="#">Mission</a></li>
+			<li class="link"><a href="#">Checkout</a></li>
+		</ul>
+		<button class="btn">Cart</button>
+	</nav>
+
+	<header class="container">
+
+	</header>
 </body>
 </html>
