--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@
 	</nav>
 
 	<header class="container">
-
+		<div class="content">
+			<span class="blur"></span>
+			<span class="blur"></span>
+			<h4>SOCK STORE</h4>
+			<h1>Help <span>disaster survivors</span> with every purchase</h1>
+			<p>Every purchase is one pair given back to disaster relief</p>
+			<button class = "btn">Shop Now</button>
+		</div>
+		<div class="image">
+			<img src="images\socksCartoonTransparent.png">
+		</div>
 	</header>
 </body>
 </html>
